devops-flagship/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlshortener
  namespace: urlshortener
spec:
  selector:
    app: urlshortener
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
