devops-flagship/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener
  namespace: urlshortener
spec:
  rules:
    - host: urlshortener.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: urlshortener
                port:
                  number: 80
